[sc-8028]: onboarding form updates
  - rewording and new options on use case question
  - new learn about us question
  - no more hosting question

--- a/libs/user/src/assets/i18n/de.json
+++ b/libs/user/src/assets/i18n/de.json
@@ -48,20 +48,24 @@
 	"onboarding.setting-up-upload.subtitle": "Laden Sie im nächsten Schritt Ihre Daten hoch und nach der Verarbeitung sind Sie für Ihre erste Suche bereit.",
 	"onboarding.setting-up-upload.title": "Machen wir uns bereit für den Import Ihrer Daten",
 	"onboarding.step1.company": "Name der Firma",
-	"onboarding.step1.host_db.help": "Pflichtfeld. Dies hat keinen Einfluss auf das Benutzererlebnis.",
-	"onboarding.step1.host_db.label": "Möchten Sie die Datenbank in Ihrer Infrastruktur hosten?",
-	"onboarding.step1.host_db.no": "Nein, ich nutze lieber die Cloud von Nuclia",
-	"onboarding.step1.host_db.yes": "Ja, ich werde NucliaDB in meiner Infrastruktur hosten",
 	"onboarding.step1.invalid_phone_code": "Ungültiger Code",
 	"onboarding.step1.invalid_phone_number": "Ungültige Telefonnummer",
+	"onboarding.step1.learn-about-us.article": "Artikel / Veröffentlichung",
+	"onboarding.step1.learn-about-us.event": "Veranstaltung",
+	"onboarding.step1.learn-about-us.github": "GitHub",
+	"onboarding.step1.learn-about-us.label": "Wie haben Sie zum ersten Mal von uns erfahren?",
+	"onboarding.step1.learn-about-us.other": "Andere",
+	"onboarding.step1.learn-about-us.web": "Web-Suche",
 	"onboarding.step1.org_size": "Wie groß ist Ihr Unternehmen?",
 	"onboarding.step1.phone": "Telefonnummer",
 	"onboarding.step1.subtitle": "Ein paar kurze Fragen und schon können Sie loslegen.",
 	"onboarding.step1.title": "Willkommen in Nuclia! 👋​ ",
 	"onboarding.step1.updates": "Erhalten Sie gelegentlich Updates über Nuclia",
-	"onboarding.step1.use_case.ai_training": "KI-Modelltraining",
+	"onboarding.step1.use_case.ai_classification": "Automatische Klassifizierung",
+	"onboarding.step1.use_case.ai_training": "Feinabstimmung meines eigenen KI-Modells",
+	"onboarding.step1.use_case.document_summarization": "Zusammenfassung des Dokuments",
 	"onboarding.step1.use_case.global_search": "Globale Site-Suche",
-	"onboarding.step1.use_case.label": "Was ist Ihr Hauptanwendungsfall?",
+	"onboarding.step1.use_case.label": "Was ist Ihr Ziel mit generativer KI?",
 	"onboarding.step1.use_case.other": "Andere",
 	"onboarding.step1.use_case.research_analysis": "Forschung und Analyse",
 	"onboarding.step1.use_case.support": "Kunden-/Mitarbeiterbetreuung",
