--- a/libs/user/src/assets/i18n/en.json
+++ b/libs/user/src/assets/i18n/en.json
@@ -48,20 +48,24 @@
 	"onboarding.setting-up-upload.subtitle": "Upload your data in the next step, and once processed, you'll be ready for your first search.",
 	"onboarding.setting-up-upload.title": "Let's get ready to import your data",
 	"onboarding.step1.company": "Company name",
-	"onboarding.step1.host_db.help": "Required field. This does not affect your users experience.",
-	"onboarding.step1.host_db.label": "Will you want to host the database in your infrastructure?",
-	"onboarding.step1.host_db.no": "No, I prefer to use Nuclia’s cloud",
-	"onboarding.step1.host_db.yes": "Yes, I will host NucliaDB in my infrastructure",
 	"onboarding.step1.invalid_phone_code": "Invalid code",
 	"onboarding.step1.invalid_phone_number": "Invalid phone number",
+	"onboarding.step1.learn-about-us.article": "Article / publication",
+	"onboarding.step1.learn-about-us.event": "Event",
+	"onboarding.step1.learn-about-us.github": "GitHub",
+	"onboarding.step1.learn-about-us.label": "How did you first learn about us?",
+	"onboarding.step1.learn-about-us.other": "Other",
+	"onboarding.step1.learn-about-us.web": "Web search",
 	"onboarding.step1.org_size": "What is your company size?",
 	"onboarding.step1.phone": "Phone number",
 	"onboarding.step1.subtitle": "A couple of quick questions, and we'll get you started.",
 	"onboarding.step1.title": "Welcome to Nuclia! 👋​",
 	"onboarding.step1.updates": "Get occasional updates about Nuclia",
-	"onboarding.step1.use_case.ai_training": "AI model training",
+	"onboarding.step1.use_case.ai_classification": "Automatic classification",
+	"onboarding.step1.use_case.ai_training": "Fine-tune my own AI model",
+	"onboarding.step1.use_case.document_summarization": "Document summarization",
 	"onboarding.step1.use_case.global_search": "Global site search",
-	"onboarding.step1.use_case.label": "What is your main use case?",
+	"onboarding.step1.use_case.label": "What is your goal with Generative AI?",
 	"onboarding.step1.use_case.other": "Other",
 	"onboarding.step1.use_case.research_analysis": "Research & Analysis",
 	"onboarding.step1.use_case.support": "Customer / employee support",
