--- a/libs/user/src/assets/i18n/es.json
+++ b/libs/user/src/assets/i18n/es.json
@@ -48,20 +48,24 @@
 	"onboarding.setting-up-upload.subtitle": "Cargue sus datos en el siguiente paso y, una vez procesados, estará listo para su primera búsqueda.",
 	"onboarding.setting-up-upload.title": "Preparémonos para importar tus datos.",
 	"onboarding.step1.company": "Nombre de empresa",
-	"onboarding.step1.host_db.help": "Campo requerido. Esto no afecta la experiencia de sus usuarios.",
-	"onboarding.step1.host_db.label": "¿Querrá alojar la base de datos en su infraestructura?",
-	"onboarding.step1.host_db.no": "No, prefiero usar la nube de Nuclia",
-	"onboarding.step1.host_db.yes": "Sí, alojaré NucliaDB en mi infraestructura",
 	"onboarding.step1.invalid_phone_code": "Codigo invalido",
 	"onboarding.step1.invalid_phone_number": "Numero de telefono invalido",
+	"onboarding.step1.learn-about-us.article": "Artículo / publicación",
+	"onboarding.step1.learn-about-us.event": "Evento",
+	"onboarding.step1.learn-about-us.github": "GitHub",
+	"onboarding.step1.learn-about-us.label": "¿Cómo supiste de nosotros por primera vez?",
+	"onboarding.step1.learn-about-us.other": "Otro",
+	"onboarding.step1.learn-about-us.web": "Búsqueda Web",
 	"onboarding.step1.org_size": "¿Cuál es el tamaño de su empresa?",
 	"onboarding.step1.phone": "Número de teléfono",
 	"onboarding.step1.subtitle": "Un par de preguntas rápidas y lo ayudaremos a comenzar.",
 	"onboarding.step1.title": "¡Bienvenidos a Nuclia! 👋​ ",
 	"onboarding.step1.updates": "Recibe actualizaciones ocasionales sobre Nuclia",
-	"onboarding.step1.use_case.ai_training": "Entrenamiento del modelo de IA",
+	"onboarding.step1.use_case.ai_classification": "Clasificación automática",
+	"onboarding.step1.use_case.ai_training": "Ajustar mi propio modelo de IA",
+	"onboarding.step1.use_case.document_summarization": "Resumen de documentos",
 	"onboarding.step1.use_case.global_search": "Búsqueda global del sitio",
-	"onboarding.step1.use_case.label": "¿Cuál es su principal caso de uso?",
+	"onboarding.step1.use_case.label": "¿Cuál es su objetivo con la IA generativa?",
 	"onboarding.step1.use_case.other": "Otros",
 	"onboarding.step1.use_case.research_analysis": "Investigación y análisis",
 	"onboarding.step1.use_case.support": "Asistencia a clientes y empleados",
