--- a/libs/user/src/assets/i18n/pt.json
+++ b/libs/user/src/assets/i18n/pt.json
@@ -48,20 +48,24 @@
 	"onboarding.setting-up-upload.subtitle": "Carregue seus dados na próxima etapa e, uma vez processados, você estará pronto para sua primeira pesquisa.",
 	"onboarding.setting-up-upload.title": "Vamos nos preparar para importar seus dados",
 	"onboarding.step1.company": "Nome da empresa",
-	"onboarding.step1.host_db.help": "Campo obrigatório. Isso não afeta a experiência do usuário.",
-	"onboarding.step1.host_db.label": "Você deseja hospedar o banco de dados em sua infraestrutura?",
-	"onboarding.step1.host_db.no": "Não, prefiro usar a nuvem da Nuclia",
-	"onboarding.step1.host_db.yes": "Sim, hospedarei o NucliaDB em minha infraestrutura",
 	"onboarding.step1.invalid_phone_code": "Código inválido",
 	"onboarding.step1.invalid_phone_number": "Número de telefone inválido",
+	"onboarding.step1.learn-about-us.article": "Artigo/publicação",
+	"onboarding.step1.learn-about-us.event": "Evento",
+	"onboarding.step1.learn-about-us.github": "GitHub",
+	"onboarding.step1.learn-about-us.label": "Como você aprendeu sobre nós pela primeira vez?",
+	"onboarding.step1.learn-about-us.other": "Outros",
+	"onboarding.step1.learn-about-us.web": "Pesquisa na internet",
 	"onboarding.step1.org_size": "Qual é o tamanho da sua empresa?",
 	"onboarding.step1.phone": "Número de telefone",
 	"onboarding.step1.subtitle": "Algumas perguntas rápidas e começaremos.",
 	"onboarding.step1.title": "Bem-vindo à Nuclia! 👋​ ",
 	"onboarding.step1.updates": "Receba atualizações ocasionais sobre Nuclia",
-	"onboarding.step1.use_case.ai_training": "Treinamento de modelo de IA",
+	"onboarding.step1.use_case.ai_classification": "Classificação automática",
+	"onboarding.step1.use_case.ai_training": "Ajustar meu próprio modelo de IA",
+	"onboarding.step1.use_case.document_summarization": "Resumo do documento",
 	"onboarding.step1.use_case.global_search": "Pesquisa global de sites",
-	"onboarding.step1.use_case.label": "Qual é o seu principal caso de uso?",
+	"onboarding.step1.use_case.label": "Qual é o seu objetivo com IA generativa?",
 	"onboarding.step1.use_case.other": "De outros",
 	"onboarding.step1.use_case.research_analysis": "Pesquisa e Análise",
 	"onboarding.step1.use_case.support": "Suporte ao cliente/funcionário",
