Remove join button from magic component
This magic component is used for both account creation and invitations. Having a `join` button was not a problem for invitation, but it was not an option for regular account creation.
So we improved the error management flow of this step, and we put it back automatic.

--- a/libs/user/src/assets/i18n/ca.json
+++ b/libs/user/src/assets/i18n/ca.json
@@ -38,6 +38,8 @@
 	"login.title": "Benvinguts a Nuclia",
 	"login.token_expired": "El testimoni ha caducat",
 	"login.try_again": "Torna-ho a intentar o recupera la contrasenya.",
+	"onboarding.failed": "S'ha produït un error, poseu-vos en contacte amb el vostre administrador.",
+	"onboarding.loading": "S'està carregant…",
 	"onboarding.next-button": "Pròxim",
 	"onboarding.setting-up.account_creation": "Creació del compte...",
 	"onboarding.setting-up.import_dataset": "S'està important el vostre conjunt de dades...",
