--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -38,6 +38,8 @@
 	"login.title": "Bienvenue à Nuclia",
 	"login.token_expired": "Le jeton a expiré",
 	"login.try_again": "Veuillez réessayer ou réinitialiser votre mot de passe ci-dessous.",
+	"onboarding.failed": "Quelque chose s'est mal passé, veuillez contacter votre administrateur.",
+	"onboarding.loading": "Chargement…",
 	"onboarding.next-button": "Suivant",
 	"onboarding.setting-up.account_creation": "Création du compte...",
 	"onboarding.setting-up.import_dataset": "Import de votre jeu de données...",
