--- a/libs/user/src/assets/i18n/ca.json
+++ b/libs/user/src/assets/i18n/ca.json
@@ -38,6 +38,8 @@
 	"login.title": "Benvinguts a Nuclia",
 	"login.token_expired": "El testimoni ha caducat",
 	"login.try_again": "Torna-ho a intentar o recupera la contrasenya.",
+	"onboarding.failed": "S'ha produït un error, poseu-vos en contacte amb el vostre administrador.",
+	"onboarding.loading": "S'està carregant…",
 	"onboarding.next-button": "Pròxim",
 	"onboarding.setting-up.account_creation": "Creació del compte...",
 	"onboarding.setting-up.import_dataset": "S'està important el vostre conjunt de dades...",
@@ -48,20 +50,24 @@
 	"onboarding.setting-up-upload.subtitle": "Carregueu les vostres dades al següent pas i, un cop processades, estaràs preparat per a la teva primera cerca.",
 	"onboarding.setting-up-upload.title": "Preparem-nos per importar les vostres dades",
 	"onboarding.step1.company": "Nom de la companyia",
-	"onboarding.step1.host_db.help": "Camp necessari. Això no afecta la vostra experiència d'usuari.",
-	"onboarding.step1.host_db.label": "Voleu allotjar la base de dades a la vostra infraestructura?",
-	"onboarding.step1.host_db.no": "No, prefereixo utilitzar el núvol de Nuclia",
-	"onboarding.step1.host_db.yes": "Sí, allotjaré NucliaDB a la meva infraestructura",
 	"onboarding.step1.invalid_phone_code": "Codi invàlid",
 	"onboarding.step1.invalid_phone_number": "Número de telèfon no vàlid",
+	"onboarding.step1.learn-about-us.article": "Article / publicació",
+	"onboarding.step1.learn-about-us.event": "Esdeveniment",
+	"onboarding.step1.learn-about-us.github": "GitHub",
+	"onboarding.step1.learn-about-us.label": "Com vas conèixer per primera vegada de nosaltres?",
+	"onboarding.step1.learn-about-us.other": "Altre",
+	"onboarding.step1.learn-about-us.web": "Cerca web",
 	"onboarding.step1.org_size": "Quina és la mida de la teva empresa?",
 	"onboarding.step1.phone": "Número de telèfon",
 	"onboarding.step1.subtitle": "Un parell de preguntes ràpides i us posarem en marxa.",
 	"onboarding.step1.title": "Benvinguts a Nuclia! 👋​ ",
 	"onboarding.step1.updates": "Obteniu actualitzacions ocasionals sobre Nuclia",
-	"onboarding.step1.use_case.ai_training": "Entrenament del model d'IA",
+	"onboarding.step1.use_case.ai_classification": "Classificació automàtica",
+	"onboarding.step1.use_case.ai_training": "Ajustar el meu propi model d'IA",
+	"onboarding.step1.use_case.document_summarization": "Resum de documents",
 	"onboarding.step1.use_case.global_search": "Cerca global de llocs",
-	"onboarding.step1.use_case.label": "Quin és el vostre cas d'ús principal?",
+	"onboarding.step1.use_case.label": "Quin és el teu objectiu amb la IA generativa?",
 	"onboarding.step1.use_case.other": "Un altre",
 	"onboarding.step1.use_case.research_analysis": "Recerca i anàlisi",
 	"onboarding.step1.use_case.support": "Suport al client/empleat",
