--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -38,6 +38,8 @@
 	"login.title": "Bienvenue à Nuclia",
 	"login.token_expired": "Le jeton a expiré",
 	"login.try_again": "Veuillez réessayer ou réinitialiser votre mot de passe ci-dessous.",
+	"onboarding.failed": "Quelque chose s'est mal passé, veuillez contacter votre administrateur.",
+	"onboarding.loading": "Chargement…",
 	"onboarding.next-button": "Suivant",
 	"onboarding.setting-up.account_creation": "Création du compte...",
 	"onboarding.setting-up.import_dataset": "Import de votre jeu de données...",
@@ -48,20 +50,24 @@
 	"onboarding.setting-up-upload.subtitle": "Téléchargez vos données à l'étape suivante et une fois traitées, vous serez prêt pour votre première recherche.",
 	"onboarding.setting-up-upload.title": "Nous nous préparons à importer vos données",
 	"onboarding.step1.company": "Nom de l'entreprise",
-	"onboarding.step1.host_db.help": "Champs requis. Cela n'affecte pas l'expérience de vos utilisateurs.",
-	"onboarding.step1.host_db.label": "Souhaitez-vous héberger la base de données dans votre infrastructure ?",
-	"onboarding.step1.host_db.no": "Non, je préfère utiliser le cloud de Nuclia",
-	"onboarding.step1.host_db.yes": "Oui, j'hébergerai NucliaDB dans mon infrastructure",
 	"onboarding.step1.invalid_phone_code": "Code invalide",
 	"onboarding.step1.invalid_phone_number": "Numéro de téléphone invalide",
+	"onboarding.step1.learn-about-us.article": "Article / publication",
+	"onboarding.step1.learn-about-us.event": "Événement",
+	"onboarding.step1.learn-about-us.github": "GitHub",
+	"onboarding.step1.learn-about-us.label": "Comment avez-vous entendu parler de nous ?",
+	"onboarding.step1.learn-about-us.other": "Autre",
+	"onboarding.step1.learn-about-us.web": "Recherche Internet",
 	"onboarding.step1.org_size": "Quelle est la taille de votre entreprise ?",
 	"onboarding.step1.phone": "Numéro de téléphone",
 	"onboarding.step1.subtitle": "Quelques questions rapides, et nous allons commencer.",
 	"onboarding.step1.title": "Bienvenue sur Nuclia ! 👋​ ",
 	"onboarding.step1.updates": "Recevoir des mises à jour occasionnelles sur Nuclia",
-	"onboarding.step1.use_case.ai_training": "Formation de modèles d'IA",
+	"onboarding.step1.use_case.ai_classification": "Classification automatique",
+	"onboarding.step1.use_case.ai_training": "Affiner mon propre modèle d'IA",
+	"onboarding.step1.use_case.document_summarization": "Résumé de documents",
 	"onboarding.step1.use_case.global_search": "Recherche globale de sites",
-	"onboarding.step1.use_case.label": "Quel est votre cas d'utilisation principal ?",
+	"onboarding.step1.use_case.label": "Quel est votre objectif avec l’IA Générative ?",
 	"onboarding.step1.use_case.other": "Autres",
 	"onboarding.step1.use_case.research_analysis": "Recherche et analyse",
 	"onboarding.step1.use_case.support": "Soutien aux clients / employés",
