[sc-7936] Rename API key roles

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -113,6 +113,14 @@
 	"activity.resource": "Recurs",
 	"activity.search": "Consultes",
 	"activity.timestamp": "Segell de temps",
+	"api-key-management.create-key.button": "Creeu una nova clau d'API",
+	"api-key-management.create-key.title": "Crea una clau d'API nova",
+	"api-key-management.description": "Important! Copieu i deseu la clau de l'API. Desapareixerà un cop afegit.",
+	"api-key-management.key-roles.manager": "Gerent",
+	"api-key-management.key-roles.reader": "Lector",
+	"api-key-management.key-roles.writer": "Escriptor",
+	"api-key-management.title": "Claus API",
+	"api-key-management.view-edit-keys.title": "Visualitza / edita les claus de l'API existents",
 	"billing.address": "Adreça",
 	"billing.amount": "Import",
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
@@ -713,7 +721,6 @@
 	"stash.create.visual_labeling.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
 	"stash.create.visual_labeling.label": "Anotar per selecció",
 	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta Knowledge Box. De forma predeterminada apareix la zona escollida a l’Account",
-	"stash.create_service_access": "Crea una clau d'API nova",
 	"stash.delete.delete": "Eliminar Knowledge Box?",
 	"stash.delete.error": "Error en crear el Knowledge Box",
 	"stash.delete.warning": "Si borres la Knowledge Box {{ kb }} també s'esborraran totes les dades que conté.",
@@ -732,7 +739,6 @@
 	"stash.manage_users": "Gestionar usuaris",
 	"stash.name": "Nom de la Knowledge Box",
 	"stash.name_your_kb": "Anomena el teu Knowledge Box",
-	"stash.new_service_access_token": "Creeu una nova clau d'API",
 	"stash.no_knowledge_boxes": "No hi ha cap cas de Knowledge Boxes en aquest compte",
 	"stash.preferences.receive_help": "Rebre ajuda",
 	"stash.preferences.receiving_emails": "Preferències del correu electrònic",
@@ -748,10 +754,6 @@
 	"stash.search-toggle-answer": "Resposta generativa",
 	"stash.search_users": "Afegir un nou usuari",
 	"stash.search_users_add": "Vols afegir aquest nou usuari al compte?",
-	"stash.seats_available": "Queden {{ seats }} seients",
-	"stash.see_stats": "Veure dades",
-	"stash.service_access": "Claus API",
-	"stash.service_access_description": "Important! Copieu i deseu la clau de l'API. Desapareixerà un cop afegit.",
 	"stash.settings.processes.classifier": "Formació sobre la intenció de cerca d'etiquetes",
 	"stash.settings.processes.classifier_info": "Per obtenir suggeriments de cerca d'etiquetes precisos, el contingut existent s'ha d'etiquetar. A mesura que s'etiqueti més contingut, la formació millorarà. Podeu crear etiquetes noves des de la pàgina de conjunts d'etiquetes.",
 	"stash.settings.processes.ner": "Formació de reconeixement d'entitats anomenades",
@@ -811,7 +813,6 @@
 	"stash.valid_domains_label": "Dominis des d’on es pot enviar correu electrònic",
 	"stash.valid_emails": "Afegeix, separats per comes, els correus electrònics dels quals s’acceptarà correu electrònic",
 	"stash.valid_emails_label": "Correus electrònics",
-	"stash.view_edit_service_access": "Visualitza / edita les claus de l'API existents",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Començar",
 	"stats.processing_time": "Temps de processament",
