--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -114,6 +114,14 @@
 	"activity.resource": "Resource",
 	"activity.search": "Queries",
 	"activity.timestamp": "Time stamp",
+	"api-key-management.create-key.button": "Create a new API key",
+	"api-key-management.create-key.title": "Create new API key",
+	"api-key-management.description": "Important! Copy and save the API key. It will disappear once added.",
+	"api-key-management.key-roles.manager": "Manager",
+	"api-key-management.key-roles.reader": "Reader",
+	"api-key-management.key-roles.writer": "Writer",
+	"api-key-management.title": "API keys",
+	"api-key-management.view-edit-keys.title": "View / Edit existing API keys",
 	"billing.address": "Address",
 	"billing.amount": "Amount",
 	"billing.assistance": "Please, <a href=\"{{url}}\">contact us</a> for assistance.",
@@ -714,7 +722,6 @@
 	"stash.create.visual_labeling.help": "Allow to visually select some parts of the document layout and annotate them.",
 	"stash.create.visual_labeling.label": "Annotate by selection",
 	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this Knowledge Box (defaults to the account’s zone)",
-	"stash.create_service_access": "Create new API key",
 	"stash.delete.delete": "Delete Knowledge Box?",
 	"stash.delete.error": "Error when creating the Knowledge Box",
 	"stash.delete.warning": "If you delete the Knowledge Box {{ kb }}, all data will also be deleted",
@@ -733,7 +740,6 @@
 	"stash.manage_users": "Manage users",
 	"stash.name": "Knowledge Box name",
 	"stash.name_your_kb": "Name your Knowledge Box",
-	"stash.new_service_access_token": "Create a new API key",
 	"stash.no_knowledge_boxes": "There are no Knowledge Boxes in this account",
 	"stash.preferences.receive_help": "Received help",
 	"stash.preferences.receiving_emails": "Email preferences",
@@ -749,10 +755,6 @@
 	"stash.search-toggle-answer": "Generative answer",
 	"stash.search_users": "Add a new user",
 	"stash.search_users_add": "Do you really want to add this user to the account? ",
-	"stash.seats_available": "{{ seats }} seats available",
-	"stash.see_stats": "See data",
-	"stash.service_access": "API keys",
-	"stash.service_access_description": "Important! Copy and save the API key. It will disappear once added.",
 	"stash.settings.processes.classifier": "Label search intent training",
 	"stash.settings.processes.classifier_info": "In order to get accurate label search suggestions, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels from the label sets page. ",
 	"stash.settings.processes.ner": "Named Entities Recognition training",
@@ -812,7 +814,6 @@
 	"stash.valid_domains_label": "Domains from which email can be sent",
 	"stash.valid_emails": "Add, separated by comas, the emails addresses from witch emails will be accepted. ",
 	"stash.valid_emails_label": "Emails",
-	"stash.view_edit_service_access": "View / Edit existing API keys",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Get started",
 	"stats.processing_time": "Processing time",
