--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -114,6 +114,14 @@
 	"activity.resource": "Ressource",
 	"activity.search": "Requêtes",
 	"activity.timestamp": "Horodatage",
+	"api-key-management.create-key.button": "Créer une nouvelle clé API",
+	"api-key-management.create-key.title": "Créer une nouvelle clé API",
+	"api-key-management.description": "Important! Copiez et enregistrez la clé API. Il disparaîtra une fois ajouté.",
+	"api-key-management.key-roles.manager": "Gestion",
+	"api-key-management.key-roles.reader": "Lecture",
+	"api-key-management.key-roles.writer": "Écriture",
+	"api-key-management.title": "Clés API",
+	"api-key-management.view-edit-keys.title": "Afficher/Modifier les clés API existantes",
 	"billing.address": "Adresse",
 	"billing.amount": "Montant",
 	"billing.assistance": "Veuillez <a href=\"{{url}}\">nous contacter</a> pour obtenir de l'aide.",
@@ -714,7 +722,6 @@
 	"stash.create.visual_labeling.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
 	"stash.create.visual_labeling.label": "Annoter par sélection",
 	"stash.create.zone_description": "Sélectionnez la zone et le fournisseur de traitement que vous souhaitez utiliser pour cette Knowledge Box (par défaut, la zone du compte)",
-	"stash.create_service_access": "Créer une nouvelle clé API",
 	"stash.delete.delete": "Supprimer la Knowledge Box ?",
 	"stash.delete.error": "Erreur lors de la création de la Knowledge Box",
 	"stash.delete.warning": "Si vous supprimez la Knowledge Box {{ kb }}, toutes les données seront également supprimées",
@@ -733,7 +740,6 @@
 	"stash.manage_users": "Gérer les utilisateurs",
 	"stash.name": "Nom de la Knowledge Box",
 	"stash.name_your_kb": "Nommez votre Knowledge Box",
-	"stash.new_service_access_token": "Créer une nouvelle clé API",
 	"stash.no_knowledge_boxes": "Il n'y a pas de Knowledge Boxes dans ce compte",
 	"stash.preferences.receive_help": "Reçu de l'aide",
 	"stash.preferences.receiving_emails": "Préférences de messagerie",
@@ -749,10 +755,6 @@
 	"stash.search-toggle-answer": "Réponse générative",
 	"stash.search_users": "Ajouter un nouvel utilisateur",
 	"stash.search_users_add": "Voulez-vous vraiment ajouter cet utilisateur au compte ?",
-	"stash.seats_available": "{{ seats }}  places disponibles",
-	"stash.see_stats": "Voir les données",
-	"stash.service_access": "Clés API",
-	"stash.service_access_description": "Important! Copiez et enregistrez la clé API. Il disparaîtra une fois ajouté.",
 	"stash.settings.processes.classifier": "Formation sur l'intention de recherche d'étiquettes",
 	"stash.settings.processes.classifier_info": "Afin d'obtenir des suggestions de recherche d'étiquettes précises, le contenu existant doit être étiqueté. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes à partir de la page des familles d'étiquettes.",
 	"stash.settings.processes.ner": "Formation sur la reconnaissance des entités nommées",
@@ -812,7 +814,6 @@
 	"stash.valid_domains_label": "Domaines à partir desquels des e-mails peuvent être envoyés",
 	"stash.valid_emails": "Ajoutez, séparées par des virgules, les adresses emails des sorcières qui seront acceptées.",
 	"stash.valid_emails_label": "Courriels",
-	"stash.view_edit_service_access": "Afficher/Modifier les clés API existantes",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Commencer",
 	"stats.processing_time": "Temps de traitement",
