--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -113,6 +113,14 @@
 	"activity.resource": "Recurso",
 	"activity.search": "Consultas",
 	"activity.timestamp": "Sello de tiempo",
+	"api-key-management.create-key.button": "Crear una nueva clave API",
+	"api-key-management.create-key.title": "Crear nueva clave API",
+	"api-key-management.description": "¡Importante! Copie y guarde la clave API. Desaparecerá una vez añadido.",
+	"api-key-management.key-roles.manager": "Gerente",
+	"api-key-management.key-roles.reader": "Lector",
+	"api-key-management.key-roles.writer": "Escritor",
+	"api-key-management.title": "Claves de api",
+	"api-key-management.view-edit-keys.title": "Ver/Editar claves API existentes",
 	"billing.address": "Dirección",
 	"billing.amount": "Importe",
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
@@ -713,7 +721,6 @@
 	"stash.create.visual_labeling.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
 	"stash.create.visual_labeling.label": "Anotar por selección",
 	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta Knowledge Box. De forma predeterminada aparece la zona escogida en el Account",
-	"stash.create_service_access": "Crear nueva clave API",
 	"stash.delete.delete": "¿Eliminar Knowledge Box?",
 	"stash.delete.error": "Error al crear el Knowledge Box",
 	"stash.delete.warning": "Si eliminas la Knowledge Box {{ kb }} también se eliminaran todos los datos que contenga",
@@ -732,7 +739,6 @@
 	"stash.manage_users": "Gestionar usuarios",
 	"stash.name": "Nombre de la Knowledge Box",
 	"stash.name_your_kb": "Nombra tu Knowledge Box",
-	"stash.new_service_access_token": "Crear una nueva clave API",
 	"stash.no_knowledge_boxes": "No hay Knowledge Boxes en esta cuenta.",
 	"stash.preferences.receive_help": "Recibir ayuda",
 	"stash.preferences.receiving_emails": "Preferencias del correo electrónico",
@@ -748,10 +754,6 @@
 	"stash.search-toggle-answer": "Respuesta generativa",
 	"stash.search_users": "Añadir un nuevo usuario",
 	"stash.search_users_add": "¿Quieres añadir el usuario a la cuenta?",
-	"stash.seats_available": "Quedan {{ seats }} asientos",
-	"stash.see_stats": "Ver los datos",
-	"stash.service_access": "Claves de api",
-	"stash.service_access_description": "¡Importante! Copie y guarde la clave API. Desaparecerá una vez añadido.",
 	"stash.settings.processes.classifier": "Capacitación de intención de búsqueda de etiquetas",
 	"stash.settings.processes.classifier_info": "Para obtener sugerencias de búsqueda de etiquetas precisas, se debe etiquetar el contenido existente. A medida que se etiqueten más contenidos, la formación mejorará. Puede crear nuevas etiquetas desde la página de conjuntos de etiquetas.",
 	"stash.settings.processes.ner": "Capacitación en reconocimiento de entidades nombradas",
@@ -811,7 +813,6 @@
 	"stash.valid_domains_label": "Dominios desde donde se puede enviar correo electrónico",
 	"stash.valid_emails": "Añada, separado por comas, las direcciones de correos electrónicos de los cuales se aceptará correo electrónico. ",
 	"stash.valid_emails_label": "Correos electrónicos",
-	"stash.view_edit_service_access": "Ver/Editar claves API existentes",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Empezar",
 	"stats.processing_time": "Tiempo de procesamiento",
