[sc-7912] & [sc-8024]: Implement new sidenav and page spacing

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -48,7 +48,6 @@
 	"account.free_trial_ended.title": "Oh! La teva prova gratuïta ha finalitzat",
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
-	"account.home": "Tauler de control del compte",
 	"account.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar en aquest compte",
 	"account.kb-description": "Un Knowledge Box és una col·lecció de contingut en què cerca Nuclia. Alguns motors de cerca l'anomenen \"índex\" o \"corpus\". En la majoria dels casos, només necessiteu un Knowledge Box per a la vostra aplicació.",
 	"account.knowledgeboxes": "Knowledge Boxes",
@@ -71,7 +70,6 @@
 	"account.public": "Públic",
 	"account.related_kbs": "Knowledge Boxes del compte",
 	"account.replace_config": "Reemplaçar configuració",
-	"account.settings": "Gestió del compte",
 	"account.speech_to_text_description": "Nuclia ofereix models millorats de veu a text. L'ús d'aquests models requereix un càlcul més elevat i suposen un cost addicional. Marqueu la casella de selecció  si voleu utilitzar els models millorats.",
 	"account.stash.add": "Afegir Knowledge Box",
 	"account.stash.delete": "Borrar",
@@ -81,7 +79,6 @@
 	"account.stash.retire": "Despublicar",
 	"account.stash.upgrade": "Incrementar màxim KB",
 	"account.stash.users": "Gestió d'usuaris",
-	"account.sync": "Sincronitzar",
 	"account.threshold": "Llindar de consum",
 	"account.title": "Nom",
 	"account.token_description": "<strong>Important!</strong> Copieu i deseu la clau de l'API. Desapareixerà un cop afegit.",
@@ -95,7 +92,6 @@
 	"account.type.stash-starter": "Compte Starter",
 	"account.type.stash-startup": "Compte Startup",
 	"account.type.stash-trial": "Compte de prova",
-	"account.users": "Gestió d'usuaris",
 	"account.users_amount": "Nombre total d'usuaris al compte",
 	"account.users_left": "Llicències disponibles",
 	"account.zone_description": "Escull la zona i el proveïdor de processament que apareixerà com a predeterminat a totes les Caixes de coneixament d’aquest compte.",
@@ -673,6 +669,22 @@
 	"search.type_of_document": "Tipus de document",
 	"search.type_of_results": "Tipus de resultats",
 	"setup.set_password": "Estableix la contrasenya",
+	"sidenav.account-home": "Panell",
+	"sidenav.account-settings": "Compte",
+	"sidenav.activity": "Registre d'activitat",
+	"sidenav.advanced": "Avançat",
+	"sidenav.api_keys": "Tecles API",
+	"sidenav.billing": "Pagament",
+	"sidenav.classification": "Conjunts d'etiquetes",
+	"sidenav.list": "Llistat recursos",
+	"sidenav.manage-kbs": "Knowledge Boxes",
+	"sidenav.nua-keys": "Tecles NUA",
+	"sidenav.settings": "Preferències",
+	"sidenav.sync": "Sincronitzar",
+	"sidenav.synonyms": "Sinònims",
+	"sidenav.trainings": "Entrenaments",
+	"sidenav.users": "Usuaris",
+	"sidenav.widgets": "Widgets",
 	"standalone.nua-key-status.invalid": "La clau Nuclia Understanding API proporcionada no és vàlida",
 	"standalone.nua-key-status.loading-error": "S'ha produït un error en carregar l'estat de la clau Nuclia Understanding API",
 	"standalone.nua-key-status.not-provided": "No s'ha proporcionat cap clau de Nuclia Understanding API",
@@ -776,17 +788,6 @@
 	"stash.settings.processes.training.start": "Comença a entrenar",
 	"stash.settings.processes.training.stop": "Deixa d'entrenar",
 	"stash.settings.processes.training.time_requirement": "El temps necessari per entrenar és d'unes {{hours}} hores que es restaran de les hores disponibles.",
-	"stash.side.activity": "Registre d'activitat",
-	"stash.side.advanced": "Avançat",
-	"stash.side.api_keys": "Tecles API",
-	"stash.side.classification": "Conjunts d'etiquetes",
-	"stash.side.list": "Llistat recursos",
-	"stash.side.manage-kbs": "Gestionar Knowledge Boxes",
-	"stash.side.settings": "Preferències",
-	"stash.side.synonyms": "Sinònims",
-	"stash.side.trainings": "Entrenaments",
-	"stash.side.users": "Usuaris",
-	"stash.side.widgets": "Widgets",
 	"stash.state.label": "Estat: ",
 	"stash.state.private": "privat",
 	"stash.state.published": "públic",
