--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -48,7 +48,6 @@
 	"account.free_trial_ended.title": "Oh! Your free trial has ended",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
-	"account.home": "Account dashboard",
 	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
 	"account.kb-description": "A Knowledge Box is a collection of content that Nuclia searches on. Some search engines call it an \"index\" or \"corpus\".  In most cases, you only need one Knowledge Box for your application.",
 	"account.knowledgeboxes": "Knowledge Boxes",
@@ -71,7 +70,6 @@
 	"account.public": "Public",
 	"account.related_kbs": "Account’s Knowledge Boxes",
 	"account.replace_config": "Replace settings",
-	"account.settings": "Account management",
 	"account.speech_to_text": "Speech-to-text",
 	"account.speech_to_text_description": "Nuclia offers enhanced speech-to-text models. Using these models require more computation and an associated extra cost. Check the following checkbox if you want to use the enhanced models.",
 	"account.stash.add": "Add Knowledge Box",
@@ -82,7 +80,6 @@
 	"account.stash.retire": "Unpublish",
 	"account.stash.upgrade": "Increase KB maximum",
 	"account.stash.users": "Users management",
-	"account.sync": "Synchronize",
 	"account.threshold": "Consumption threshold",
 	"account.title": "Name",
 	"account.token_description": "<strong>Important!</strong> Copy and save the API key. It will disappear once added.",
@@ -96,7 +93,6 @@
 	"account.type.stash-starter": "Starter account",
 	"account.type.stash-startup": "Startup account",
 	"account.type.stash-trial": "Trial Account",
-	"account.users": "Account users management",
 	"account.users_amount": "Total number of users in the account",
 	"account.users_left": "Total licenses left",
 	"account.zone_description": "Zone where data is hosted",
@@ -674,6 +670,22 @@
 	"search.type_of_document": "Type of document",
 	"search.type_of_results": "Type of results",
 	"setup.set_password": "Set your password",
+	"sidenav.account-home": "Dashboard",
+	"sidenav.account-settings": "Account",
+	"sidenav.activity": "Activity log",
+	"sidenav.advanced": "Advanced",
+	"sidenav.api_keys": "API keys",
+	"sidenav.billing": "Payment",
+	"sidenav.classification": "Label sets",
+	"sidenav.list": "Resources list",
+	"sidenav.manage-kbs": "Knowledge Boxes",
+	"sidenav.nua-keys": "NUA keys",
+	"sidenav.settings": "Settings",
+	"sidenav.sync": "Synchronize",
+	"sidenav.synonyms": "Synonyms",
+	"sidenav.trainings": "Trainings",
+	"sidenav.users": "Users",
+	"sidenav.widgets": "Widgets",
 	"standalone.nua-key-status.invalid": "Nuclia Understanding API key provided is invalid",
 	"standalone.nua-key-status.loading-error": "Error while loading Nuclia Understanding API key status",
 	"standalone.nua-key-status.not-provided": "No Nuclia Understanding API key provided",
@@ -777,17 +789,6 @@
 	"stash.settings.processes.training.start": "Start training",
 	"stash.settings.processes.training.stop": "Stop training",
 	"stash.settings.processes.training.time_requirement": "The time required to train is about {{hours}} hours which will be subtracted from the available hours.",
-	"stash.side.activity": "Activity log",
-	"stash.side.advanced": "Advanced",
-	"stash.side.api_keys": "API keys",
-	"stash.side.classification": "Label sets",
-	"stash.side.list": "Resources list",
-	"stash.side.manage-kbs": "Manage Knowledge Boxes",
-	"stash.side.settings": "Settings",
-	"stash.side.synonyms": "Synonyms",
-	"stash.side.trainings": "Trainings",
-	"stash.side.users": "Users",
-	"stash.side.widgets": "Widgets",
 	"stash.state.label": "State: ",
 	"stash.state.private": "private",
 	"stash.state.published": "public",
