--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -48,7 +48,6 @@
 	"account.free_trial_ended.title": "¡Oh! Tu prueba gratuita ha finalizado",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
-	"account.home": "Panel de cuenta",
 	"account.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta cuenta",
 	"account.kb-description": "Una caja de conocimiento es una colección de contenido en la que Nuclia busca. Algunos motores de búsqueda lo llaman \"índice\" o \"corpus\". En la mayoría de los casos, solo necesita un Knowledge Box para su aplicación.",
 	"account.knowledgeboxes": "Knowledge Boxes",
@@ -71,7 +70,6 @@
 	"account.public": "Público",
 	"account.related_kbs": "Knowledge Boxes de la cuenta",
 	"account.replace_config": "Reemplazar configuración",
-	"account.settings": "Gestión de la cuenta",
 	"account.speech_to_text_description": "Nuclia ofrece modelos mejorados de voz a texto. El uso de estos modelos requiere un cómputo mayor y tienen un costo extra. Marque la siguiente casilla de verificación si desea utilizar los modelos mejorados.",
 	"account.stash.add": "Añadir Knowledge Box",
 	"account.stash.delete": "Borrar",
@@ -81,7 +79,6 @@
 	"account.stash.retire": "Despublicar",
 	"account.stash.upgrade": "Incrementar el máximo de KB",
 	"account.stash.users": "Gestión de usuarios",
-	"account.sync": "Sincronizar",
 	"account.threshold": "Umbral de consumo",
 	"account.title": "Nombre",
 	"account.token_description": "<strong>¡Importante!</strong> Copie y guarde la clave API. Desaparecerá una vez añadido.",
@@ -95,7 +92,6 @@
 	"account.type.stash-starter": "Cuenta Starter",
 	"account.type.stash-startup": "Cuenta Startup",
 	"account.type.stash-trial": "Cuenta de prueba",
-	"account.users": "Gestión de usuarios",
 	"account.users_amount": "Usuarios totales a la cuenta",
 	"account.users_left": "Licencias disponibles",
 	"account.zone_description": "Elija la zona y el proveedor de procesamiento que aparecerá como predeterminado en todas las Cajas de conocimiento de esta cuenta.",
@@ -673,6 +669,22 @@
 	"search.type_of_document": "Tipo de documento",
 	"search.type_of_results": "Tipo de resultados",
 	"setup.set_password": "Establece tu contraseña",
+	"sidenav.account-home": "Tablero",
+	"sidenav.account-settings": "Cuenta",
+	"sidenav.activity": "Registro de actividad",
+	"sidenav.advanced": "Avanzado",
+	"sidenav.api_keys": "Claves de api",
+	"sidenav.billing": "Pago",
+	"sidenav.classification": "Conjuntos de etiquetas",
+	"sidenav.list": "Listado de recursos",
+	"sidenav.manage-kbs": "Knowledge Boxes",
+	"sidenav.nua-keys": "Claves NUA",
+	"sidenav.settings": "Preferencias",
+	"sidenav.sync": "Sincronizar",
+	"sidenav.synonyms": "Sinónimos",
+	"sidenav.trainings": "Entrenamientos",
+	"sidenav.users": "Usuarios",
+	"sidenav.widgets": "Widgets",
 	"standalone.nua-key-status.invalid": "La clave Nuclia Understanding API proporcionada no es válida",
 	"standalone.nua-key-status.loading-error": "Error al cargar el estado de la clave Nuclia Understanding API",
 	"standalone.nua-key-status.not-provided": "No se proporcionó ninguna clave Nuclia Understanding API",
@@ -776,17 +788,6 @@
 	"stash.settings.processes.training.start": "Empezar a entrenar",
 	"stash.settings.processes.training.stop": "Dejar de entrenar",
 	"stash.settings.processes.training.time_requirement": "El tiempo necesario para entrenar es de unas {{hours}} horas que se restarán de las horas disponibles.",
-	"stash.side.activity": "Registro de actividad",
-	"stash.side.advanced": "Avanzado",
-	"stash.side.api_keys": "Claves de api",
-	"stash.side.classification": "Conjuntos de etiquetas",
-	"stash.side.list": "Listado de recursos",
-	"stash.side.manage-kbs": "Administrar Knowledge Boxes",
-	"stash.side.settings": "Preferencias",
-	"stash.side.synonyms": "Sinónimos",
-	"stash.side.trainings": "Entrenamientos",
-	"stash.side.users": "Usuarios",
-	"stash.side.widgets": "Widgets",
 	"stash.state.label": "Estado: ",
 	"stash.state.private": "privado",
 	"stash.state.published": "público",
