--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -48,7 +48,6 @@
 	"account.free_trial_ended.title": "Votre essai gratuit est terminé",
 	"account.full_name": "Prénom et nom de famille",
 	"account.generate_key": "Générer une nouvelle clé",
-	"account.home": "Tableau de bord du compte",
 	"account.invited_user": "Nous avons envoyé un e-mail d'invitation à {{user}} pour qu'il s'inscrive sur ce compte.",
 	"account.kb-description": "Une boîte à connaissances est un ensemble de contenus sur lesquels Nuclia effectue des recherches. Certains moteurs de recherche l'appellent \"index\" ou \"corpus\".  Dans la plupart des cas, vous n'avez besoin que d'une seule boîte de connaissances pour votre application.",
 	"account.knowledgeboxes": "Knowledge Boxes",
@@ -71,7 +70,6 @@
 	"account.public": "Public",
 	"account.related_kbs": "Knowledge Boxes du compte",
 	"account.replace_config": "Remplacer les paramètres",
-	"account.settings": "Gestion du compte",
 	"account.speech_to_text": "De la parole au texte",
 	"account.speech_to_text_description": "Nuclia propose des modèles de synthèse vocale améliorés. L'utilisation de ces modèles nécessite plus de calculs et un coût supplémentaire associé. Cochez la case suivante si vous souhaitez utiliser les modèles améliorés.",
 	"account.stash.add": "Ajouter une Knowledge Box",
@@ -82,7 +80,6 @@
 	"account.stash.retire": "Dépublier",
 	"account.stash.upgrade": "Augmenter le maximum de KB",
 	"account.stash.users": "Gestion des utilisateurs",
-	"account.sync": "Synchroniser",
 	"account.threshold": "Seuil de consommation",
 	"account.title": "Nom",
 	"account.token_description": "<strong> Important !</strong> Copiez et enregistrez la clé API. Il disparaîtra une fois ajouté.",
@@ -96,7 +93,6 @@
 	"account.type.stash-starter": "Compte de démarrage",
 	"account.type.stash-startup": "Compte de démarrage",
 	"account.type.stash-trial": "Compte d'essai",
-	"account.users": "Gestion des comptes utilisateurs",
 	"account.users_amount": "Nombre total d'utilisateurs dans le compte",
 	"account.users_left": "Total des licences restantes",
 	"account.zone_description": "Zone où les données sont hébergées",
@@ -674,6 +670,22 @@
 	"search.type_of_document": "Type de document",
 	"search.type_of_results": "Type de résultats",
 	"setup.set_password": "Définir votre mot de passe",
+	"sidenav.account-home": "Tableau de bord",
+	"sidenav.account-settings": "Compte",
+	"sidenav.activity": "Journal d'activité",
+	"sidenav.advanced": "Avancé",
+	"sidenav.api_keys": "Clés API",
+	"sidenav.billing": "Paiement",
+	"sidenav.classification": "Familles d'étiquettes",
+	"sidenav.list": "Liste des ressources",
+	"sidenav.manage-kbs": "Knowledge Boxes",
+	"sidenav.nua-keys": "Clés NUA",
+	"sidenav.settings": "Réglages",
+	"sidenav.sync": "Synchroniser",
+	"sidenav.synonyms": "Synonymes",
+	"sidenav.trainings": "Entraînements",
+	"sidenav.users": "Utilisateurs",
+	"sidenav.widgets": "Widgets",
 	"standalone.nua-key-status.invalid": "La clé Nuclia Understanding API fournie n'est pas valide",
 	"standalone.nua-key-status.loading-error": "Erreur lors du chargement de l'état de la clé Nuclia Understanding API",
 	"standalone.nua-key-status.not-provided": "Aucune clé Nuclia Understanding API fournie",
@@ -777,17 +789,6 @@
 	"stash.settings.processes.training.start": "Commence l'entraînement",
 	"stash.settings.processes.training.stop": "Arrêter l'entraînement",
 	"stash.settings.processes.training.time_requirement": "Le temps nécessaire pour s'entraîner est d'environ {{hours}}  heures qui seront soustraites des heures disponibles.",
-	"stash.side.activity": "Journal d'activité",
-	"stash.side.advanced": "Avancé",
-	"stash.side.api_keys": "Clés API",
-	"stash.side.classification": "Familles d'étiquettes",
-	"stash.side.list": "Liste des ressources",
-	"stash.side.manage-kbs": "Gérer les Knowledge Boxes",
-	"stash.side.settings": "Réglages",
-	"stash.side.synonyms": "Synonymes",
-	"stash.side.trainings": "Entraînements",
-	"stash.side.users": "Utilisateurs",
-	"stash.side.widgets": "Widgets",
 	"stash.state.label": "État : ",
 	"stash.state.private": "privé",
 	"stash.state.published": "public",
